<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.codelibs</groupId>
	<artifactId>nekohtml</artifactId>
	<packaging>jar</packaging>
	<name>Neko HTML</name>
	<description>An HTML parser and tag balancer.</description>
	<version>3.0.0-SNAPSHOT</version>
	<url>https://github.com/codelibs/nekohtml</url>
	<inceptionYear>2012</inceptionYear>
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<organization>
		<name>CodeLibs Project</name>
		<url>https://www.codelibs.org/</url>
	</organization>
	<developers>
		<developer>
			<id>shinsuke</id>
			<name>Shinsuke Sugaya</name>
			<email>shinsuke.sugaya@codelibs.co</email>
			<organization>CodeLibs Inc.</organization>
			<organizationUrl>https://codelibs.co</organizationUrl>
		</developer>
	</developers>
	<scm>
		<connection>scm:git:git@github.com:codelibs/nekohtml.git</connection>
		<url>scm:git:git@github.com:codelibs/nekohtml.git</url>
		<developerConnection>scm:git:git@github.com:codelibs/nekohtml.git</developerConnection>
	</scm>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.0</version>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
					<release>17</release>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.11.2</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<docencoding>UTF-8</docencoding>
					<charset>UTF-8</charset>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.2</version>
				<configuration>
					<archive>
						<manifestEntries>
							<Automatic-Module-Name>org.codelibs.nekohtml</Automatic-Module-Name>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.0</version>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.13</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.mycila</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>5.0.0</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<properties>
						<year>2025</year>
					</properties>
					<headerDefinitions>
						<headerDefinition>https://www.codelibs.org/assets/license/header-definition-2.xml</headerDefinition>
					</headerDefinitions>
					<licenseSets>
						<licenseSet>
							<header>https://www.codelibs.org/assets/license/header.txt</header>
							<includes>
								<include>src/**/*.java</include>
							</includes>
						</licenseSet>
					</licenseSets>
				</configuration>
			</plugin>
			<plugin>
				<groupId>net.revelc.code</groupId>
				<artifactId>formatter-maven-plugin</artifactId>
				<version>0.5.2</version>
				<executions>
					<execution>
						<goals>
							<goal>format</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<configFile>${basedir}/src/config/eclipse/formatter/java.xml</configFile>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.2.7</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.central</groupId>
				<artifactId>central-publishing-maven-plugin</artifactId>
				<version>0.7.0</version>
				<extensions>true</extensions>
				<configuration>
					<publishingServerId>central</publishingServerId>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.11.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>5.14.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>5.14.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
